test/bad/functions/nested02.px

func f() def
    x = 5
    func g() def
        print x
        return
    return
